--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = blocks/panopto
 	url = https://github.com/Panopto/Moodle-2.0-Plugin-for-Panopto.git
     url = https://github.com/kwiliarty/Moodle-2.0-Plugin-for-Panopto.git
+[submodule "blocks/federated_login"]
+	path = blocks/federated_login
+	url = https://github.com/kwiliarty/moodle-block_federated_login.git
