adds submodule: blocks/filtered_course_list

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "theme/newfallen"]
 	path = theme/newfallen
 	url = http://kevinwiliarty.com/git/moodle-theme_newfallen.git
+[submodule "blocks/filtered_course_list"]
+	path = blocks/filtered_course_list
+	url = https://github.com/kwiliarty/moodle-block_filtered_course_list.git
