--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "theme/smithreads"]
 	path = theme/smithreads
 	url = http://kevinwiliarty.com/git/moodle-theme_smithreads.git
+[submodule "local/mass_enroll"]
+	path = local/mass_enroll
+	url = https://github.com/patrickpollet/moodle_local_mass_enroll.git
