--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "local/mass_enroll"]
 	path = local/mass_enroll
 	url = https://github.com/patrickpollet/moodle_local_mass_enroll.git
+[submodule "filter/videojs"]
+	path = filter/videojs
+	url = http://kevinwiliarty.com/git/moodle-filter_videojs.git
